--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
   </head>
 
   <body>
-    <h1>Hello World, we are software developers!</h1>
+    <main id="main">
+      <h1 id="title">Dr. Norman Borlaug</h1>
+      <p></p>
+     <figure id="img-div">
+      <img src="" alt="" id="image">
+      <figcaption id="img-caption">description about image</figcaption>
+     </figure>
+     <section id="tribute-info">some text here</section>
+     <a href="google.com" target="_blank" id="tribute-link">google</a>
+    </main>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
